--- a/src/index.html
+++ b/src/index.html
@@ -1,23 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="UTF-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Excel App</title>
-   </head>
-   <body>
-      <!-- This is your app entry-->
-      <div id="app">
-         <section class="section section-muted">
-            <div class="container container-m">
-               <div class="card card-danger bdr-10">
-                  <div class="card-body">
-                     <h3>Hello World</h3>
-                  </div>
-               </div>
-            </div>
-         </section>
-      </div>
-   </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Excel App</title>
+  </head>
+  <body>
+    <!-- This is your app entry-->
+    <div id="app" class="container"></div>
+  </body>
 </html>
