--- a/src/index.html
+++ b/src/index.html
@@ -1,23 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="UTF-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Excel App</title>
-   </head>
-   <body>
-      <!-- This is your app entry-->
-      <div id="app">
-         <section class="section section-muted">
-            <div class="container container-m">
-               <div class="card card-danger bdr-10">
-                  <div class="card-body">
-                     <h3>Hello World</h3>
-                  </div>
-               </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
+    <title>Excel App</title>
+  </head>
+  <body>
+    <!-- This is your app entry-->
+    <div id="app">
+      <header class="section section-muted section-collapse py-10">
+        <div class="header container">
+          <input type="text" class="header__input" value="Новая таблица" />
+          <div class="header__buttons">
+            <div class="btn btn-icon btn-danger mr-10">
+              <span class="material-symbols-outlined"> exit_to_app </span>
             </div>
-         </section>
+            <div class="btn btn-icon btn-secondary"><span class="material-symbols-outlined"> delete_forever </span></div>
+          </div>
+        </div>
+      </header>
+      <div class="section section-success py-10">
+        <div class="toolbar container">
+          <div class="toolbar__font-style">
+            <span class="material-symbols-outlined"> format_bold </span>
+            <span class="material-symbols-outlined"> format_italic </span>
+            <span class="material-symbols-outlined"> format_underlined </span>
+          </div>
+          <div class="toolbar__font-align">
+            <span class="material-symbols-outlined"> format_align_left </span>
+            <span class="material-symbols-outlined"> format_align_center </span>
+            <span class="material-symbols-outlined"> format_align_right </span>
+          </div>
+        </div>
       </div>
-   </body>
+    </div>
+  </body>
 </html>
