--- a/src/index.html
+++ b/src/index.html
@@ -9,32 +9,6 @@
   </head>
   <body>
     <!-- This is your app entry-->
-    <div id="app">
-      <header class="section section-muted section-collapse py-10">
-        <div class="header container">
-          <input type="text" class="header__input" value="Новая таблица" />
-          <div class="header__buttons">
-            <div class="btn btn-icon btn-danger mr-10">
-              <span class="material-symbols-outlined"> exit_to_app </span>
-            </div>
-            <div class="btn btn-icon btn-secondary"><span class="material-symbols-outlined"> delete_forever </span></div>
-          </div>
-        </div>
-      </header>
-      <div class="section section-success py-10">
-        <div class="toolbar container">
-          <div class="toolbar__font-style">
-            <span class="material-symbols-outlined"> format_bold </span>
-            <span class="material-symbols-outlined"> format_italic </span>
-            <span class="material-symbols-outlined"> format_underlined </span>
-          </div>
-          <div class="toolbar__font-align">
-            <span class="material-symbols-outlined"> format_align_left </span>
-            <span class="material-symbols-outlined"> format_align_center </span>
-            <span class="material-symbols-outlined"> format_align_right </span>
-          </div>
-        </div>
-      </div>
-    </div>
+    <div id="app"></div>
   </body>
 </html>
