--- a/src/index.html
+++ b/src/index.html
@@ -13,3 +13,6 @@
     <div id="app"></div>
   </body>
 </html>
+
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus veniam ut autem, rem commodi saepe harum itaque dignissimos laudantium iste, soluta voluptatibus facere incidunt vitae similique sit
+corrupti ducimus nostrum.
